--- a/Caddyfile
+++ b/Caddyfile
@@ -9,17 +9,12 @@
     reverse_proxy backend:8000
   }
 
-  handle /static/* {
-    reverse_proxy backend:8000
-  }
-
-  handle /media/* {
-    reverse_proxy backend:8000
+  handle_path /static/* {
+    root * /static/
+    file_server
   }
 
   handle {
     reverse_proxy frontend:80
-    header Cache-Control "no-store"
-    try_files {path} /index.html
   }
 }
