--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -23,7 +23,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn' 
-        
+        cache-dependency-path: frontend/yarn.lock
+ 
     - name: Install dependencies
       run: cd frontend && yarn install --non-interactive
       
