--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [20.x, 22.x, 23.x, 24.x]
         # Node.js 23.x и 24.x еще не выпущены (на январь 2025)
         
     steps:
