--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Frontend CI
 
 on:
   push:
@@ -13,7 +13,6 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x, 22.x, 23.x, 24.x]
-        # Node.js 23.x и 24.x еще не выпущены (на январь 2025)
         
     steps:
     - uses: actions/checkout@v4
