--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django>=5.2.4",
+    "django-cors-headers>=4.7.0",
     "django-rest-framework>=0.1.0",
     "drf-spectacular[sidecar]>=0.28.0",
     "gunicorn>=23.0.0",
