--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     container_name: backend
     environment:
       - DEBUG=${DEBUG:-1}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-http://frontend, http://localhost:8080}
     volumes:
       - static:/app/staticfiles
     restart: unless-stopped
